syntax = "proto3";

package v1;

import "api/v1/search_service.proto";
import weak "google/api/annotations.proto";
import "storage/virtual_machine.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

message GetVirtualMachineRequest {
  string id = 1;
  bool include_snoozed = 2;
  bool strip_description = 3;
}

message CreateVirtualMachineRequest {
  storage.VirtualMachine virtual_machine = 1;
}

message ListVirtualMachinesResponse {
  repeated storage.VirtualMachine virtual_machines = 1;
}

message DeleteVirtualMachineRequest {
  string id = 1;
}

message DeleteVirtualMachinesRequest {
  RawQuery query = 1;
  bool confirm = 2;
}

message DeleteVirtualMachineResponse {
  bool success = 2;
}

message DeleteVirtualMachinesResponse {
  uint32 num_deleted = 1;
  bool dry_run = 2;
}

service VirtualMachineService {
  rpc CreateVirtualMachine(CreateVirtualMachineRequest) returns (storage.VirtualMachine) {
    option (google.api.http) = {
      post: "/v1/virtualmachines"
      body: "*"
    };
  }

  rpc GetVirtualMachine(GetVirtualMachineRequest) returns (storage.VirtualMachine) {
    option (google.api.http) = {get: "/v1/virtualmachines/{id}"};
  }

  rpc ListVirtualMachines(RawQuery) returns (ListVirtualMachinesResponse) {
    option (google.api.http) = {get: "/v1/virtualmachines"};
  }

  rpc DeleteVirtualMachine(DeleteVirtualMachineRequest) returns (DeleteVirtualMachineResponse) {
    option (google.api.http) = {delete: "/v1/virtualmachines/{id}"};
  }

  rpc DeleteVirtualMachines(DeleteVirtualMachinesRequest) returns (DeleteVirtualMachinesResponse) {
    option (google.api.http) = {delete: "/v1/virtualmachines"};
  }
}
